<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_main_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_main_filter"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_main_help"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_readme"
                android:title="@string/menu_main_readme"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>
