<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutCallEntry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/entryFrom"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/entry_from" />

    <TextView
        android:id="@+id/entryCaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:text="@string/placeholder_caller"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entryStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="2"
        android:text="@string/placeholder_start" />

    <TextView
        android:id="@+id/entryTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:text="@string/entry_to" />

    <TextView
        android:id="@+id/entryCallee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_columnWeight="2"
        android:text="@string/placeholder_callee"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/entryEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_columnWeight="2"
        android:text="@string/placeholder_end" />

    <TextView
        android:id="@+id/entryDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_columnWeight="1"
        android:gravity="center_horizontal"
        android:text="@string/placeholder_duration" />

</GridLayout>
